# SAMkNN-on-FPGA

./: .gitignore  README.md
evaluation/: reference.py
evaluation/experiments/: experiments.py  run.py
implementation/: build_bulk.py  build_bulk_config.py  setup.py
implementation/hls/ddr2stream/: generate_ip.tcl
implementation/hls/ddr2stream/src/: ddr2stream.cpp  ddr2stream.h
implementation/hls/samknn/: generate_ip.tcl
implementation/hls/samknn/src/: samknn.cpp  samknn.h  samknn_config.h  samknn_types.h
implementation/hls/samknn/src/common/: best_class.cpp  best_class.h  correct_class.cpp  correct_class.h
implementation/hls/samknn/src/kn_unit/: calc_dist.cpp  calc_dist.h  farthest_correct.cpp  farthest_correct.h  k_best_collector.cpp  k_best_collector.h  kn_unit.cpp  kn_unit.h  runs_combiner.cpp  runs_combiner.h
implementation/hls/samknn/src/knn_out/: k_best_combiner.cpp  k_best_combiner.h  knn_out.cpp  knn_out.h  prediction_histories.cpp  (+1 more)
implementation/hls/samknn/test/: main.cpp  samknn_test.cpp  tests.h
implementation/hls/stream2ddr/: generate_ip.tcl
implementation/hls/stream2ddr/src/: stream2ddr.cpp  stream2ddr.h
implementation/host/samknn/: CMakeLists.txt
implementation/host/samknn/src/: main.cpp
implementation/petalinux/SAMkNN/: .gitignore
implementation/petalinux/SAMkNN/project-spec/hw-description/drivers/stream2ddr_v1_0/src/: CMakeLists.txt  Makefile  xstream2ddr.c  xstream2ddr.h  xstream2ddr_hw.h  xstream2ddr_linux.c  xstream2ddr_sinit.c
implementation/vivado/samknn/: export_hardware.tcl  make_wrapper.tcl  samknn.xpr
(+39 files in other folders)
